Complete rewrite/restructuring the original pong.js into its component modules. Holy shit this took a lot of time. Next time remember to split into components before it gets too big.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Pong example</title>
   <script language="javascript" type="text/javascript" src="p5.js"></script>
-  <script language="javascript" type="text/javascript" src="pong.js"></script>
+  <script language="javascript" type="text/javascript" src="bundle.js"></script>
 </head>
   <body>
   </body>
