--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Pong example</title>
-  <script language="javascript" type="text/javascript" src="p5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
   <script language="javascript" type="text/javascript" src="bundle.js"></script>
 </head>
   <body>
